crabbing-interpreters/tests/testsuite/snapshots/testsuite__craftinginterpreters__test__call__object.lox.snap
---
source: crabbing-interpreters/tests/testsuite/main.rs
info:
  program: crabbing-interpreters
  args:
    - craftinginterpreters/test/call/object.lox
---
success: false
exit_code: 70
----- stdout -----

----- stderr -----
Error: not callable: `<Foo instance at [POINTER]>` is of type `Instance`
   ╭─[craftinginterpreters/test/call/object.lox:4:1]
   │
 4 │ foo(); // expect runtime error: Can only call functions and classes.
   │ ─┬─  
   │  ╰─── this expression is of type `Instance`
───╯
